--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "hover.css": "^2.3.2",
     "react": "17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "17.0.2",
