--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.15",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
