--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hammontreewebdev-portfolio-reactjs",
   "version": "0.1.0",
+  "homepage": "https://HammontreeWebDev.github.io/portfolio-reactjs",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.0.1"
+    "@iconify/react": "^4.0.1",
+    "gh-pages": "^4.0.0"
   }
 }
