--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "17.0.2",
+    "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.15",
