--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "hover.css": "^2.3.2",
     "react": "17.0.2",
     "react-animations": "^1.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "17.0.2",
     "react-player": "^2.12.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.6",
-    "sweetalert2": "^11.6.15",
+    "sweetalert2": "^11.4.8",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
