--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "17.0.2",
     "react-player": "^2.12.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.8",
